fix: divider whitespace getting removed from html

--- a/src/templates/atsTemplate/AtsTemplate.module.css
+++ b/src/templates/atsTemplate/AtsTemplate.module.css
@@ -53,6 +53,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 6px;
+}
+
+.uniContactDivider {
+  color: #666;
 }
 
 .uniContactItem {
